Add missing GetTargetNamespace backend operation
